@@ -1,11 +1,8 @@
-package com.flightcli.flight_cli;
+package com.flightcli.flight_cli.service;
 
 import com.fasterxml.jackson.core.type.TypeReference;
-import com.flightcli.flight_cli.service.FlightService;
-import com.flightcli.model.Aircraft;
-import com.flightcli.model.Airport;
-import com.flightcli.model.City;
-import com.flightcli.model.Passenger;
+import com.flightcli.flight_cli.model.Aircraft;
+import com.flightcli.flight_cli.model.Airport;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -13,6 +10,8 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.io.IOException;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -33,41 +32,38 @@ class FlightServiceTest {
         flightService = new FlightService(apiClient);
     }
 
-    // ---- Q1: Airports for city ----
-
+    // Returns a list of airports for a valid city ID
     @Test
     void getAirportsForCity_returnsListOfAirports() throws IOException, InterruptedException {
         Airport a1 = new Airport();
-        a1.setId(1L);
-        a1.setName("JFK Airport");
-        a1.setCode("JFK");
+        a1.setId(1L); a1.setName("JFK Airport"); a1.setCode("JFK");
 
         Airport a2 = new Airport();
-        a2.setId(2L);
-        a2.setName("LaGuardia Airport");
-        a2.setCode("LGA");
+        a2.setId(2L); a2.setName("LaGuardia Airport"); a2.setCode("LGA");
 
         when(apiClient.getList(eq("/cities/1/airports"), any(TypeReference.class)))
-                .thenReturn(List.of(a1, a2));
+                .thenReturn(Arrays.asList(a1, a2));
 
-        List<Airport> airports = flightService.getAirportsForCity(1L);
+        List<Airport> result = flightService.getAirportsForCity(1L);
 
-        assertEquals(2, airports.size());
-        assertEquals("JFK Airport", airports.get(0).getName());
-        assertEquals("LGA", airports.get(1).getCode());
+        assertEquals(2, result.size());
+        assertEquals("JFK Airport", result.get(0).getName());
+        assertEquals("LGA", result.get(1).getCode());
         verify(apiClient, times(1)).getList(eq("/cities/1/airports"), any(TypeReference.class));
     }
 
+    // Returns empty list when city has no airports
     @Test
     void getAirportsForCity_returnsEmptyList_whenNoAirports() throws IOException, InterruptedException {
         when(apiClient.getList(eq("/cities/99/airports"), any(TypeReference.class)))
-                .thenReturn(List.of());
+                .thenReturn(Collections.emptyList());
 
-        List<Airport> airports = flightService.getAirportsForCity(99L);
+        List<Airport> result = flightService.getAirportsForCity(99L);
 
-        assertTrue(airports.isEmpty());
+        assertTrue(result.isEmpty());
     }
 
+    // Throws IOException when the API call fails
     @Test
     void getAirportsForCity_throwsIOException_whenApiFails() throws IOException, InterruptedException {
         when(apiClient.getList(eq("/cities/1/airports"), any(TypeReference.class)))
@@ -76,18 +72,31 @@ class FlightServiceTest {
         assertThrows(IOException.class, () -> flightService.getAirportsForCity(1L));
     }
 
-    // ---- Q2: Aircraft for passenger ----
+    // Returns a single airport and checks its name and code are correct
+    @Test
+    void getAirportsForCity_returnsSingleAirport_withCorrectDetails() throws IOException, InterruptedException {
+        Airport a = new Airport();
+        a.setId(5L); a.setName("O'Hare International"); a.setCode("ORD");
 
+        when(apiClient.getList(eq("/cities/5/airports"), any(TypeReference.class)))
+                .thenReturn(Arrays.asList(a));
+
+        List<Airport> result = flightService.getAirportsForCity(5L);
+
+        assertEquals(1, result.size());
+        assertEquals("O'Hare International", result.get(0).getName());
+        assertEquals("ORD", result.get(0).getCode());
+    }
+
+    // Returns a list of aircraft a passenger has flown on
     @Test
     void getAircraftForPassenger_returnsListOfAircraft() throws IOException, InterruptedException {
         Aircraft aircraft = new Aircraft();
-        aircraft.setId(1L);
-        aircraft.setType("Boeing 737");
-        aircraft.setAirlineName("Delta");
-        aircraft.setNumberOfPassengers(180);
+        aircraft.setId(1L); aircraft.setType("Boeing 737");
+        aircraft.setAirlineName("Delta"); aircraft.setNumberOfPassengers(180);
 
         when(apiClient.getList(eq("/passengers/1/aircraft"), any(TypeReference.class)))
-                .thenReturn(List.of(aircraft));
+                .thenReturn(Arrays.asList(aircraft));
 
         List<Aircraft> result = flightService.getAircraftForPassenger(1L);
 
@@ -96,16 +105,18 @@ class FlightServiceTest {
         assertEquals("Delta", result.get(0).getAirlineName());
     }
 
+    // Returns empty list when passenger has no flight history
     @Test
     void getAircraftForPassenger_returnsEmptyList_whenNoFlights() throws IOException, InterruptedException {
         when(apiClient.getList(eq("/passengers/5/aircraft"), any(TypeReference.class)))
-                .thenReturn(List.of());
+                .thenReturn(Collections.emptyList());
 
         List<Aircraft> result = flightService.getAircraftForPassenger(5L);
 
         assertTrue(result.isEmpty());
     }
 
+    // Throws InterruptedException when the request is interrupted
     @Test
     void getAircraftForPassenger_throwsInterruptedException() throws IOException, InterruptedException {
         when(apiClient.getList(eq("/passengers/1/aircraft"), any(TypeReference.class)))
@@ -114,17 +125,33 @@ class FlightServiceTest {
         assertThrows(InterruptedException.class, () -> flightService.getAircraftForPassenger(1L));
     }
 
-    // ---- Q3: Airports for aircraft ----
+    // Returns multiple aircraft and checks passenger capacity on each
+    @Test
+    void getAircraftForPassenger_returnsMultipleAircraft_withCorrectCapacity() throws IOException, InterruptedException {
+        Aircraft a1 = new Aircraft();
+        a1.setId(1L); a1.setType("Boeing 737"); a1.setAirlineName("Delta"); a1.setNumberOfPassengers(180);
 
+        Aircraft a2 = new Aircraft();
+        a2.setId(2L); a2.setType("Airbus A320"); a2.setAirlineName("United"); a2.setNumberOfPassengers(150);
+
+        when(apiClient.getList(eq("/passengers/2/aircraft"), any(TypeReference.class)))
+                .thenReturn(Arrays.asList(a1, a2));
+
+        List<Aircraft> result = flightService.getAircraftForPassenger(2L);
+
+        assertEquals(2, result.size());
+        assertEquals(180, result.get(0).getNumberOfPassengers());
+        assertEquals(150, result.get(1).getNumberOfPassengers());
+    }
+
+    // Returns a list of airports used by a given aircraft
     @Test
     void getAirportsForAircraft_returnsListOfAirports() throws IOException, InterruptedException {
         Airport airport = new Airport();
-        airport.setId(3L);
-        airport.setName("Heathrow");
-        airport.setCode("LHR");
+        airport.setId(3L); airport.setName("Heathrow"); airport.setCode("LHR");
 
         when(apiClient.getList(eq("/aircraft/2/airports"), any(TypeReference.class)))
-                .thenReturn(List.of(airport));
+                .thenReturn(Arrays.asList(airport));
 
         List<Airport> result = flightService.getAirportsForAircraft(2L);
 
@@ -133,6 +160,7 @@ class FlightServiceTest {
         assertEquals("LHR", result.get(0).getCode());
     }
 
+    // Returns multiple airports for one aircraft
     @Test
     void getAirportsForAircraft_returnsMultipleAirports() throws IOException, InterruptedException {
         Airport a1 = new Airport(); a1.setId(1L); a1.setName("JFK"); a1.setCode("JFK");
@@ -140,24 +168,32 @@ class FlightServiceTest {
         Airport a3 = new Airport(); a3.setId(3L); a3.setName("Charles de Gaulle"); a3.setCode("CDG");
 
         when(apiClient.getList(eq("/aircraft/1/airports"), any(TypeReference.class)))
-                .thenReturn(List.of(a1, a2, a3));
+                .thenReturn(Arrays.asList(a1, a2, a3));
 
         List<Airport> result = flightService.getAirportsForAircraft(1L);
 
         assertEquals(3, result.size());
     }
 
-    // ---- Q4: Airports for passenger ----
+    // Returns empty list when aircraft has no associated airports
+    @Test
+    void getAirportsForAircraft_returnsEmptyList_whenNoAirports() throws IOException, InterruptedException {
+        when(apiClient.getList(eq("/aircraft/99/airports"), any(TypeReference.class)))
+                .thenReturn(Collections.emptyList());
 
+        List<Airport> result = flightService.getAirportsForAircraft(99L);
+
+        assertTrue(result.isEmpty());
+    }
+
+    // Returns a list of airports a passenger has used
     @Test
     void getAirportsForPassenger_returnsListOfAirports() throws IOException, InterruptedException {
         Airport airport = new Airport();
-        airport.setId(1L);
-        airport.setName("JFK Airport");
-        airport.setCode("JFK");
+        airport.setId(1L); airport.setName("JFK Airport"); airport.setCode("JFK");
 
         when(apiClient.getList(eq("/passengers/1/airports"), any(TypeReference.class)))
-                .thenReturn(List.of(airport));
+                .thenReturn(Arrays.asList(airport));
 
         List<Airport> result = flightService.getAirportsForPassenger(1L);
 
@@ -165,77 +201,23 @@ class FlightServiceTest {
         assertEquals("JFK Airport", result.get(0).getName());
     }
 
+    // Returns empty list when passenger has no airport history
     @Test
     void getAirportsForPassenger_returnsEmptyList_whenNoHistory() throws IOException, InterruptedException {
         when(apiClient.getList(eq("/passengers/10/airports"), any(TypeReference.class)))
-                .thenReturn(List.of());
+                .thenReturn(Collections.emptyList());
 
         List<Airport> result = flightService.getAirportsForPassenger(10L);
 
         assertTrue(result.isEmpty());
     }
 
-    // ---- Helper methods ----
-
+    // Throws IOException when API is unreachable
     @Test
-    void getAllCities_returnsListOfCities() throws IOException, InterruptedException {
-        City city = new City();
-        city.setId(1L);
-        city.setName("New York");
-        city.setState("NY");
-        city.setPopulation(8000000);
+    void getAirportsForPassenger_throwsIOException_whenApiFails() throws IOException, InterruptedException {
+        when(apiClient.getList(eq("/passengers/1/airports"), any(TypeReference.class)))
+                .thenThrow(new IOException("API unavailable"));
 
-        when(apiClient.getList(eq("/cities"), any(TypeReference.class)))
-                .thenReturn(List.of(city));
-
-        List<City> result = flightService.getAllCities();
-
-        assertEquals(1, result.size());
-        assertEquals("New York", result.get(0).getName());
-        assertEquals("NY", result.get(0).getState());
-    }
-
-    @Test
-    void getAllPassengers_returnsListOfPassengers() throws IOException, InterruptedException {
-        Passenger p = new Passenger();
-        p.setId(1L);
-        p.setFirstName("John");
-        p.setLastName("Doe");
-        p.setPhoneNumber("555-1234");
-
-        when(apiClient.getList(eq("/passengers"), any(TypeReference.class)))
-                .thenReturn(List.of(p));
-
-        List<Passenger> result = flightService.getAllPassengers();
-
-        assertEquals(1, result.size());
-        assertEquals("John", result.get(0).getFirstName());
-        assertEquals("Doe", result.get(0).getLastName());
-    }
-
-    @Test
-    void getAllAircraft_returnsListOfAircraft() throws IOException, InterruptedException {
-        Aircraft a = new Aircraft();
-        a.setId(1L);
-        a.setType("Airbus A320");
-        a.setAirlineName("United");
-        a.setNumberOfPassengers(150);
-
-        when(apiClient.getList(eq("/aircraft"), any(TypeReference.class)))
-                .thenReturn(List.of(a));
-
-        List<Aircraft> result = flightService.getAllAircraft();
-
-        assertEquals(1, result.size());
-        assertEquals("Airbus A320", result.get(0).getType());
-        assertEquals("United", result.get(0).getAirlineName());
-    }
-
-    @Test
-    void getAllAircraft_throwsIOException_whenConnectionFails() throws IOException, InterruptedException {
-        when(apiClient.getList(eq("/aircraft"), any(TypeReference.class)))
-                .thenThrow(new IOException("Connection timed out"));
-
-        assertThrows(IOException.class, () -> flightService.getAllAircraft());
+        assertThrows(IOException.class, () -> flightService.getAirportsForPassenger(1L));
     }
 }
